# RhymeEngine

./: .gitignore  CMakeLists.txt
addFilesHere/: dict.txt  test1.txt  test3.txt
docs/: README.md  checkpoint1_reflection.md  checkpoint1_tests.md  checkpoint2_plan.md  checkpoint2_reflection.md  checkpoint2_tests.md  dictionary_usage.md  final_reflection.md  implementation_plan.md
include/: Colors.h  Line.h  PartsOfSpeech.h  Phonemes.h  RhymeEngine.h  Text.h  Word.h  dict.txt  phonemes.h  test_dict.txt
src/: Line.cpp  RhymeEngine.cpp  Text.cpp  Word.cpp  analogy.cpp  dict.txt  distance.cpp  main.cpp
tests/: test_dictionary.cpp  test_enums.cpp  test_highlight_rhymes.cpp  test_rhymeStrength.cpp  test_rhyme_engine.cpp  test_text_storage.cpp  test_word.cpp  test_word_make.cpp
tests/test/: rhymetest.txt  rhymetest2.txt  rhymetest3.txt  test4.txt
